<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".BookActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/cover_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/bookcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/bookdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>

</LinearLayout>