<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="italic" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_image"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/account" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textSize="@dimen/inputs" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/inputs" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/not_yet_a_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/not_yet_a_member"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>